# api/openapi.yaml
@@ -661,11 +661,14 @@ paths:
       summary: Filtrar pessoas a serem selecionadas em forms
       operationId: filterPessoas
       parameters:
+      - name: search
+        in: query
+        required: true
+        schema:
+          type: string
       - name: withoutUser
         in: query
         required: false
-        style: form
-        explode: true
         schema:
           type: boolean
       responses:
