# services/ResourcesService.ts
@@ -15,9 +15,90 @@ var FileSrvc = require('./FileService');
 var writer = require('../utils/writer.ts');
 var foreach = require('../utils/foreach').foreach;
 
-var filterPessoas = (withoutUser) => {
-    return new Promise<void>( (accept, reject) => {
-        accept()
+var filterPessoas = (withoutUser=false, search) => {
+    return new Promise<Array<object>>( (accept, reject) => {
+        var options: any = {}
+        if (withoutUser) {
+            options = {
+                where: {
+                    '$user.id$': null,
+                    [Op.or]: [
+                        {
+                            nome: {
+                                [Op.like]: `%${search}%`
+                            }
+                        }, {
+                            cpf: {
+                                [Op.like]: `%${search}%`
+                            }
+                        }
+                    ]
+                },
+                include: [
+                    {
+                        model: Endereco,
+                        required: true,
+                        include: {
+                            model: Cidade,
+                            required: true,
+                            include: {
+                                model: Estado,
+                                required: true,
+                                include: {
+                                    model: Pais,
+                                    required: true,
+                                    as: 'pais'
+                                }
+                            }
+                        }
+                    },{
+                        model: User,
+                        as: 'user',
+                        required: false
+                    }
+                ],
+                limit: 50
+            }
+        } else {
+            options = {
+                where: {
+                    [Op.or]: [
+                        {
+                            nome: {
+                                [Op.like]: `%${search}%`
+                            }
+                        },{
+                            cpf: {
+                                [Op.like]: `%${search}%`
+                            }
+                        }
+                    ]
+                },
+                include: {
+                    model: Endereco,
+                    required: true,
+                    include: {
+                        model: Cidade,
+                        required: true,
+                        include: {
+                            model: Estado,
+                            required: true,
+                            include: {
+                                model: Pais,
+                                required: true,
+                                as: 'pais'
+                            }
+                        }
+                    }
+                },
+                limit: 50
+            }
+        }
+        Pessoa.findAll(options).then( (pessoas) => {
+            accept(pessoas)
+        }).catch( (err) => {
+            reject(err)
+        })
     });
 }
 
@@ -79,22 +160,42 @@ var listPaises = () => {
     });
 }
 
-var getFotos = (pessoas) => {
+var getFoto = (pessoa) => {
+    return new Promise<void>( (accept, reject) => {
+        if (pessoa.foto.trim() != '') {
+            FileSrvc.getFoto(pessoa.foto).then( (data) => {
+                pessoa.foto = data
+                accept()
+            }).catch( (err) => {
+                reject(err)
+            })
+        } else {
+            accept()
+        }
+    })
+}
+
+var getContatosFotos = (contatos) => {
     return new Promise<any>( (accept, reject) => {
-        foreach(pessoas, (pessoa) => {
+        foreach(contatos, (contato) => {
             return new Promise<void>( (accept, reject) => {
-                if (pessoa.foto.trim() != '') {
-                    FileSrvc.getFoto(pessoa.foto).then( (data) => {
-                        pessoa.foto = data
-                        accept()
-                    }).catch( (err) => {
-                        reject(err)
-                    })
-                } else {
+                getFoto(contato.pessoa).then( () => {
                     accept()
-                }
+                }).catch( (err) => {
+                    reject(err)
+                })
             })
         }).then( () => {
+            accept(contatos)
+        }).catch( (err) => {
+            reject(err)
+        })
+    })
+}
+
+var getPessoasFotos = (pessoas) => {
+    return new Promise<any>( (accept, reject) => {
+        foreach(pessoas, getFoto).then( () => {
             accept(pessoas)
         }).catch( (err) => {
             reject(err)
@@ -109,5 +210,6 @@ module.exports = {
     listContatoTipos: listContatoTipos,
     listEstados: listEstados,
     listPaises: listPaises,
-    getFotos: getFotos
+    getPessoasFotos: getPessoasFotos,
+    getContatosFotos: getContatosFotos
 }
